--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     overflow-x: hidden;
 }
-nav img{
-    width: 60px;
-    height: 60px;
-    margin: 10px;
-    border-radius: 12px;
+nav h1{
+    font-size: 16px;
+    padding: 10px;
+   
 
 }
 nav{
     display: flex;
     position: relative;
     background-color: #7099df;
+    width: 100%;
+    height: 10vh;
     
 }
 nav ul{
@@ -110,7 +111,7 @@ nav ul li a:hover{
 footer{
     background: #11439b;
     color: #fff;
-    height: 40px;
+    height: 43vh;
 }
 .footer-content {
     display: flex;
@@ -138,6 +139,34 @@ footer{
 .footer-content a:hover {
     text-decoration: underline;
 }
+form{
+    background-color: #7099df;
+    border-radius: 12px;
+    width: 40%;
+    padding: 10px;
+}
+form .red-star{
+    color: rgb(231, 89, 89);
+}
+form label{
+    padding: 10px;
+}
+form input{
+    margin: 10px;
+}
+form button{
+    margin-top: 10px;
+    margin-left: 8%;
+    width: 40%;
+    height: 5vh;
+    font-size: 16px;
+    border-radius: 10px;
+    border: none;
+}
+form button:hover{
+    background-color: #11439b;
+    color: #fff;
+}
 @media (max-width: 1024px) {
     nav ul {
         margin-left: auto; 
@@ -163,7 +192,7 @@ footer{
 @media (max-width: 768px) {
     nav {
         flex-direction: column;
-        align-items: center;
+        align-items: start;
     }
 
     nav ul {
